src/test/ui/codemap_tests/tab_3.stderr
error[E0382]: borrow of moved value: `some_vec`
  --> $DIR/tab_3.rs:7:20
   |
LL |     let some_vec = vec!["hi"];
   |         -------- move occurs because `some_vec` has type `Vec<&str>`, which does not implement the `Copy` trait
LL |     some_vec.into_iter();
   |              ----------- `some_vec` moved due to this method call
LL |     {
LL |         println!("{:?}", some_vec);
   |                          ^^^^^^^^ value borrowed here after move
   |
note: this function takes ownership of the receiver `self`, which moves `some_vec`
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
   |
LL |     fn into_iter(self) -> Self::IntoIter;
   |                  ^^^^
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
